--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,370 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-color: var(--background-color);
+  padding: 0 10px;
+  background-attachment: fixed;
+  background-image: var(--background-image);
+  background-size: cover;
+  background-position: center;
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+}
+
+.header {
+  display: grid;
+  min-block-size: 668px;
+  grid-template-rows: minmax(228px, auto) min-content minmax(228px, auto);
+  position: relative;
+  padding: 10px 0;
+}
+
+.header__decoration {
+  font-size: var(--main-font-size);
+  color: var(--main-color);
+  font-family: var(--main-font);
+  font-weight: var(--main-font-weight);
+  position: absolute;
+  top: 10px;
+  right: 28px;
+  display: block;
+}
+
+.header__decoration::after {
+  content: "";
+  inline-size: 9px;
+  block-size: 9px;
+  background-color: var(--main-color);
+  position: absolute;
+  top: 8px;
+  right: -19px;
+  border-radius: 100%;
+  box-shadow: 0px 0px 4px 2px var(--main-color);
+  display: block;
+}
+
+.header__theme-menu {
+  grid-row: 1;
+  justify-self: end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  padding: 1.5px 13px;
+  color: var(--main-color);
+  background-color: transparent;
+  border: none;
+  font-family: var(--main-font);
+  font-size: var(--main-font-size);
+  font-weight: var(--main-font-weight);
+  text-transform: lowercase;
+  line-height: 18px;
+  min-block-size: 26px;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--button-hover);
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--main-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+  border-bottom: 1px solid var(--main-color);
+}
+
+.header__title {
+  grid-row: 2;
+  align-self: center;
+  font-size: var(--additional-font-size);
+  line-height: 83%;
+  font-family: var(--main-font);
+  font-weight: var(--additional-font-weight);
+  color: var(--additional-color);
+  text-shadow: 4px 4px 0px var(--main-color);
+  justify-self: center;
+}
+
+.header__description {
+  grid-row: 3;
+  align-self: center;
+  font-family: var(--main-font);
+  font-weight: var(--additional-font-weight);
+  font-size: var(--main-font-size);
+  color: var(--dark-color);
+  line-height: 23.4px;
+}
+
+.text-decor {
+  background-color: var(--main-color);
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  border-block-start: 1px solid var(--main-color);
+  border-inline-end: 1px solid var(--main-color);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 0px;
+  border-block-end: 1px solid var(--main-color);
+  border-inline-start: 1px solid var(--main-color);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.main {
+  padding: 40px 0;
+  display: grid;
+  gap: 50px;
+}
+
+.section, .section__list {
+  display: grid;
+  gap: 20px;
+}
+
+.section__title {
+  color: var(--main-color);
+  font-size: var(--main-font-size);
+  font-weight: var(--additional-font-weight);
+  font-family: var(--main-font);
+  line-height: 23.4px;
+}
+
+.section__article, .list__article {
+  display: grid;
+  gap: 10px;
+}
+
+.article__title, .list__title {
+  color: var(--dark-color);
+  font-size: var(--main-font-size);
+  font-weight: var(--additional-font-weight);
+  font-family: var(--main-font);
+  line-height: 23.4px;
+}
+
+.article__paragraph {
+  color: var(--paragraph-text-color);
+  font-size: var(--main-font-size);
+  font-weight: var(--main-font-weight);
+  font-family: var(--main-font);
+  line-height: 23.4px;
+}
+
+.article__paragraph a {
+  text-shadow: 1px 1px 0 var(--main-color);
+}
+
+.article__paragraph a:hover {
+  border-bottom: 2px solid var(--link-hover);
+}
+
+.article__paragraph a:focus {
+  outline: 1px solid var(--link-hover);
+}
+
+.list__article__title {
+  color: var(--dark-color);
+  font-size: var(--main-font-size);
+  font-weight: var(--main-font-weight);
+  font-family: var(--main-font);
+  line-height: 23.4px;
+}
+
+.section__pictures {
+  gap: 10px;
+}
+
+.section__gallery {
+  display: grid;
+  gap: 10px;
+}
+
+.gallery__image {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  display: grid;
+  min-height: 667px;
+  padding-bottom: 10px;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.footer__title {
+  font-family: var(--main-font);
+  font-size: var(--additional-font-size);
+  font-weight: var(--additional-font-weight);
+  color: var(--additional-color);
+  text-shadow: 2px 2px 0 var(--main-color);
+}
+
+@media (width >= 768px) {
+  :root {
+    --additional-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .page {
+    padding: 0 20px;
+  }
+
+  .header {
+  min-block-size: 1024px;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 20px 0;
+  }
+
+  .header__theme-menu {
+  grid-column: 2;
+  }
+
+  .header__title {
+    justify-self: start;
+    grid-column: span 2;
+    transform: translateX(-20px);
+  }
+
+  .header__description {
+  justify-self: end;
+  grid-column: 2;
+  }
+
+  .header__decoration {
+    top: 20px;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
+  }
+
+  .decorated-zone::after {
+    bottom: 20px;
+  }
+
+  .main {
+    padding: 60px 0;
+    gap: 80px;
+  }
+
+  .section {
+    grid-template-columns: minmax(min-content, 236px) minmax(472px, auto);
+  }
+
+  .section__why-so-hard .section__article {
+    grid-column: 2;
+  }
+
+  .section__what-is-bad .section__article {
+    grid-column: span 2;
+  }
+
+  .section__pictures {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .section__gallery {
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+  }
+
+  .gallery__image:nth-child(1) {
+    grid-column: span 2;
+  }
+
+  .gallery__image:nth-child(2) {
+    grid-row: span 2;
+  }
+
+  .gallery__image:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .gallery__image:nth-child(5) {
+    grid-column: span 2;
+  }
+
+  .footer {
+    min-height: 1024px;
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    grid-template-columns: 1fr 0.5fr 0.5fr 1fr;
+    min-block-size: 768px;
+  }
+
+  .header__theme-menu {
+    grid-column: span 4;
+    justify-self: center;
+    align-self: flex-start;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .header__title {
+    grid-column: span 4;
+  }
+
+  .header__description {
+    grid-column: 3 / 5;
+  }
+
+  .section {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section__why-so-hard .section__article {
+    grid-column: 2 / 4;
+  }
+
+  .section__what-is-bad .section__title {
+    grid-row: 1;
+    grid-column: 1;
+  }
+
+  .section__what-is-bad .section__article {
+    grid-column: span 1;
+    grid-row: 2;
+    align-self: flex-start;
+  }
+
+  .section__list {
+    grid-column: 2 / 4;
+  }
+
+  .section__pictures {
+    grid-template-columns: 1fr;
+  }
+
+  .footer {
+    min-height: 768px;
+  }
 }
