--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,12 +5,11 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  --main-color: rgba(255, 0, 112, 1);
+  --additional-color: rgba(219, 0, 255, 1);
+  --dark-color: rgba(0, 0, 40, 1);
+  --paragraph-text-color: rgba(241, 178, 206, 1);
+  --button-hover: rgba(255, 0, 112, 0.4);
+  --link-hover:rgba(241, 178, 206, 1);
+  --background-image: url("/images/cover-image-dark.png");
 }
