--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,58 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --main-color: rgba(255, 141, 203, 1);
+  --additional-color: rgba(255, 194, 230, 1);
+  --dark-color: rgba(53, 52, 48, 1);
+  --paragraph-text-color: rgba(53, 52, 48, 1);
+  --button-hover: rgba(50, 49, 45, 0.4);
+  --link-hover:rgba(53, 52, 48, 1);
+  --background-image: url("/images/cover-image-light.png");
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: light) {
+  :root {
+  --main-color: rgba(255, 141, 203, 1);
+  --additional-color: rgba(255, 194, 230, 1);
+  --dark-color: rgba(53, 52, 48, 1);
+  --paragraph-text-color: rgba(53, 52, 48, 1);
+  --button-hover: rgba(50, 49, 45, 0.4);
+  --link-hover:rgba(53, 52, 48, 1);
+  --background-image: url("/images/cover-image-light.png");
+  }
+}
+
+.theme-light .header__decoration::after {
+  display: none;
+}
+
+.theme-light .header__decoration {
+  display: none;
+}
+
+.theme-light .header__theme-menu-button {
+  color: var(--dark-color);
+}
+
+.theme-light .header__theme-menu-button_active {
+  outline: 1px solid var(--dark-color);
+}
+
+.theme-light .decorated-zone::before {
+  border-block-start: 1px solid var(--dark-color);
+  border-inline-end: 1px solid var(--dark-color);
+}
+
+.theme-light .decorated-zone::after {
+  border-block-end: 1px solid var(--dark-color);
+  border-inline-start: 1px solid var(--dark-color);
+}
+
+.theme-light .section__title {
+  color: var(--dark-color);
+}
+
+.theme-light .header__theme-menu-button:focus {
+  outline: none;
+  border-bottom: 1px solid var(--dark-color);
 }
