--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,15 @@
 /* Глобальные стили для проекта, их можно дополнять и менять по желанию */
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("/fonts/IBMPlexMono-Regular.woff");
+  font-weight: regular;
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("/fonts/IBMPlexMono-Bold.woff");
+  font-weight: bold;
+}
 
 *,
 *::before,
@@ -10,6 +21,8 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -39,16 +52,4 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
-}
-
-@font-face {
-  font-family: "IBM Plex Mono";
-  src: url("/fonts/IBMPlexMono-Regular.woff");
-  font-weight: regular;
-}
-
-@font-face {
-  font-family: "IBM Plex Mono";
-  src: url("/fonts/IBMPlexMono-Bold.woff");
-  font-weight: bold;
 }
